# AdventOfCode2017

./: CMakeLists.txt
src/: genericlist.c  genericlist.h  intlist.c  intlist.h  ioutils.c  ioutils.h  main.c  stringlist.c  stringlist.h
src/day1/: day1.c  day1.h
src/day2/: day2.c  day2.h
src/day3/: day3.c  day3.h
src/day4/: day4.c  day4.h
src/day5/: day5.c  day5.h
src/day6/: day6.c  day6.h
